<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fachada_background02"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/siteBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="@mipmap/logo_adporto_editada"/>

<!--
    <Button
        android:id="@+id/siteBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/site_adp"
        android:textAllCaps="false"/> -->

    <Button
        android:id="@+id/pesquisaBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/pesquisa"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/aquisicaoBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/formulario_aquisicao"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/visitaBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/formulario_visita"
        android:textAllCaps="false"/>

    <!--
    <Button
        android:id="@+id/calendarioBtn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Calendário"
        android:textAllCaps="false"/> -->

    <Button
        android:id="@+id/contactosBtn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/contactos"
        android:textAllCaps="false"/>


</LinearLayout>